added auth conf

--- a/resources/lang/he.json
+++ b/resources/lang/he.json
@@ -44,5 +44,6 @@
     "Whoops!": "אוופס!",
     "Dashboard": "לוח הבקרה",
     "Pages": "עמודים",
-    "Settings": "הגדרות"
+    "Settings": "הגדרות",
+    "Save": "שמירה"
 }
